Fix: app loader state in dark mode (#8784)
* fix: app loader state in dark mode

* fixes

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -8141,7 +8141,6 @@ tbody {
   .load {
     display: flex;
     justify-content: center;
-    margin: 200px auto;
   }
 
   .load div {
@@ -10998,6 +10997,10 @@ tbody {
 
   .empty-state-org-constants {
     padding-top: 5rem;
+
+    .info {
+      color: var(--slate11);
+    }
   }
 
   .workspace-constant-card-body {
@@ -12252,6 +12255,7 @@ tbody {
 }
 
 #popover-user-menu {
+  box-shadow: 0px 2px 4px -2px var(--indigo1), 0px 4px 8px -2px var(--indigo1);
 
   .popover-body {
     padding: 0rem 0.8rem;
